--- a/app/templates/email/ride_denied.html
+++ b/app/templates/email/ride_denied.html
@@ -1,7 +1,5 @@
-<p>Hi {{rider.name}},</p>
+<p>Hi {{ rider['name'] }},</p>
 
-<p>Unfortunately, the driver declined your request to join the
-carpool from {{carpool.leave_place}} to {{carpool.to_place}}, departing at
-{{carpool.leave_time | humanize }}.</p>
+<p>Unfortunately, the driver declined your request to join the carpool from {{ carpool['leave_place'] }} to {{ carpool['to_place'] }}, departing at {{ carpool['leave_time'] | humanize }}.</p>
 
 <p>Please visit {{url_for('carpool.find', _external=True)}} to look for another ride.</p>
