--- a/app/templates/email/ride_request_cancelled.html
+++ b/app/templates/email/ride_request_cancelled.html
@@ -1,8 +1,7 @@
-<p>Hi {{carpool.driver.name}},</p>
+<p>Hi {{ carpool['driver']['name'] }},</p>
 
-<p>We wanted to let you know that {{rider.name}} has cancelled their request to ride with you
-in the car leaving from {{carpool.leave_place}} at {{carpool.leave_time | humanize }}.</p>
+<p>We wanted to let you know that {{ rider['name'] }} has cancelled their request to ride with you in the car leaving from {{ carpool['leave_place'] }} at {{ carpool['leave_time'] | humanize }}.</p>
 
-<p><a href="{{url_for('carpool.details', uuid=carpool.uuid, _external=True)}}">Details about this carpool.</a></p>
+<p><a href="{{ url_for('carpool.details', uuid=carpool['uuid'], _external=True) }}">Details about this carpool.</a></p>
 
 <p>Thanks!</p>
